force-app/main/default/objects/Customer_Feedback__c/Customer_Feedback__c.object-meta.xml
<CustomObject>
    <description>Feedback</description>
    <label>Customer Feedback</label>
    <nameField>
        <displayFormat>CFB-{000000}</displayFormat>
        <label>Customer Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>