force-app/main/default/objects/Customer_Feedback__c/fields/Accuracy_Of_Proccessing__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Of_Proccessing__c</fullName>
    <description>The accuracy of the processing by your Payroll Executive</description>
    <label>Accuracy Of Proccessing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>