force-app/main/default/objects/Customer_Feedback__c/fields/All_Questions_Answered__c.field-meta.xml
<CustomField>
    <fullName>All_Questions_Answered__c</fullName>
    <inlineHelpText>All your questions were answered clearly &amp; adequately</inlineHelpText>
    <label>All Questions Answered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>