force-app/main/default/objects/Customer_Feedback__c/fields/CGLink__c.field-meta.xml
<CustomField>
    <fullName>CGLink__c</fullName>
    <formula>IF ( 
ISBLANK( CustomerGaugeID__c ), 
&quot;&quot;, 
HYPERLINK(&quot;https://cvm.customergauge.com/Categorising?number_customergauge=&quot; &amp; CustomerGaugeID__c , &quot;CustomerGaugeLink&quot;, &quot;_blank&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGLink</label>
    <type>Text</type>
</CustomField>