force-app/main/default/objects/Customer_Feedback__c/fields/Contacted_When_Promised__c.field-meta.xml
<CustomField>
    <fullName>Contacted_When_Promised__c</fullName>
    <label>Contacted When Promised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>