force-app/main/default/objects/Customer_Feedback__c/fields/Correct_Solution_ProvidedISBLANK__c.field-meta.xml
<CustomField>
    <fullName>Correct_Solution_ProvidedISBLANK__c</fullName>
    <formula>ISBlank( CorrectSolutionProvided__c )</formula>
    <label>Correct Solution ProvidedISBLANK</label>
    <type>Checkbox</type>
</CustomField>