force-app/main/default/objects/Customer_Feedback__c/fields/CorrectSolutionProvided__c.field-meta.xml
<CustomField>
    <fullName>CorrectSolutionProvided__c</fullName>
    <label>Correct Solution Provided</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>