force-app/main/default/objects/Customer_Feedback__c/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <formula>(Resolution_Time__c + Contacted_When_Promised__c + CorrectSolutionProvided__c + Initial_Response_Time__c + Professionalism_Correct_Information__c + Regular_Updates__c) / (

IF(  l__c ,0,1) + 
IF( Correct_Solution_ProvidedISBLANK__c   ,0,1) + 
IF( InitialResponseTimeIBLANK__c  ,0,1) +
IF( Professionalism_Correct_InformationISB__c  ,0,1) + 
IF( ResolutionTimeISBLANK__c  ,0,1) + 
IF( RegularUpdateISBLANK__c  ,0,1)


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>