force-app/main/default/objects/Customer_Feedback__c/fields/CustomerGaugeID__c.field-meta.xml
<CustomField>
    <fullName>CustomerGaugeID__c</fullName>
    <externalId>true</externalId>
    <label>Customer Gauge ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>