force-app/main/default/objects/Customer_Feedback__c/fields/Date_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Survey_Completed__c</fullName>
    <label>Date Survey Completed</label>
    <type>Date</type>
</CustomField>