force-app/main/default/objects/Customer_Feedback__c/fields/Date_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Survey_Sent__c</fullName>
    <label>Date Survey Sent</label>
    <type>Date</type>
</CustomField>