force-app/main/default/objects/Customer_Feedback__c/fields/Detractor__c.field-meta.xml
<CustomField>
    <fullName>Detractor__c</fullName>
    <formula>Score__c  &lt;= 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Score  &lt;= 6</inlineHelpText>
    <label>Detractor</label>
    <type>Checkbox</type>
</CustomField>