force-app/main/default/objects/Customer_Feedback__c/fields/Drivers__c.field-meta.xml
<CustomField>
    <fullName>Drivers__c</fullName>
    <label>Drivers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>