force-app/main/default/objects/Customer_Feedback__c/fields/Features_Functionality__c.field-meta.xml
<CustomField>
    <fullName>Features_Functionality__c</fullName>
    <label>Features &amp; Functionality</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>