force-app/main/default/objects/Customer_Feedback__c/fields/How_likely_are_you_to_recommend_Access__c.field-meta.xml
<CustomField>
    <fullName>How_likely_are_you_to_recommend_Access__c</fullName>
    <label>How likely are you to recommend Access</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>