force-app/main/default/objects/Customer_Feedback__c/fields/Initial_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response_Time__c</fullName>
    <label>Initial Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>