force-app/main/default/objects/Customer_Feedback__c/fields/InitialResponseTimeIBLANK__c.field-meta.xml
<CustomField>
    <fullName>InitialResponseTimeIBLANK__c</fullName>
    <formula>ISBlank( Initial_Response_Time__c )</formula>
    <label>InitialResponseTimeIBLANK</label>
    <type>Checkbox</type>
</CustomField>