force-app/main/default/objects/Customer_Feedback__c/fields/Knowledge_base_and_online_community__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_base_and_online_community__c</fullName>
    <description>Our knowledge base and online community Question #41 (0-10)</description>
    <label>Knowledge base and online community</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>