force-app/main/default/objects/Customer_Feedback__c/fields/l__c.field-meta.xml
<CustomField>
    <fullName>l__c</fullName>
    <formula>ISBLANK( Contacted_When_Promised__c )</formula>
    <label>ContactedWhenPromisedISBlank</label>
    <type>Checkbox</type>
</CustomField>