force-app/main/default/objects/Customer_Feedback__c/fields/Most_Recent_Biannual_Survey__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Biannual_Survey__c</fullName>
    <formula>Date_Survey_Completed__c = Account__r.Most_Recent_NPS_Biannual_Survey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Biannual Survey</label>
    <type>Checkbox</type>
</CustomField>