force-app/main/default/objects/Customer_Feedback__c/fields/NPS_Survey_Products__c.field-meta.xml
<CustomField>
    <fullName>NPS_Survey_Products__c</fullName>
    <label>NPS Survey Products</label>
    <length>225</length>
    <type>Text</type>
</CustomField>