force-app/main/default/objects/Customer_Feedback__c/fields/NPS_Type__c.field-meta.xml
<CustomField>
    <fullName>NPS_Type__c</fullName>
    <formula>IF( Score__c  &lt;= 6, &quot;Detractor&quot;, 
IF( Score__c  &lt;= 8, &quot;Passive&quot;,
IF( Score__c  &gt;= 9, &quot;Promoter&quot;,
&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Type</label>
    <type>Text</type>
</CustomField>