force-app/main/default/objects/Customer_Feedback__c/fields/Opportunity_To_Discuss_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_To_Discuss_Outcomes__c</fullName>
    <inlineHelpText>You had the opportunity to discuss your expected business outcomes for this FlightPath implementation</inlineHelpText>
    <label>Opportunity To Discuss Outcomes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>