force-app/main/default/objects/Customer_Feedback__c/fields/Overall_Product_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Overall_Product_Satisfaction__c</fullName>
    <label>Overall Product Satisfaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>