force-app/main/default/objects/Customer_Feedback__c/fields/Passive__c.field-meta.xml
<CustomField>
    <fullName>Passive__c</fullName>
    <formula>Score__c  &gt;= 7  &amp;&amp;  Score__c  &lt;= 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>score &gt;=7 and &lt;=8</inlineHelpText>
    <label>Passive</label>
    <type>Checkbox</type>
</CustomField>