force-app/main/default/objects/Customer_Feedback__c/fields/Perceived_NPS__c.field-meta.xml
<CustomField>
    <fullName>Perceived_NPS__c</fullName>
    <label>Perceived NPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>