force-app/main/default/objects/Customer_Feedback__c/fields/PNPS__c.field-meta.xml
<CustomField>
    <fullName>PNPS__c</fullName>
    <label>Product NPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>