force-app/main/default/objects/Customer_Feedback__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <formula>IF (Score__c &lt;= 6, &apos;Detractor&apos;, 
IF (AND(Score__c &gt; 6, Score__c &lt;= 8), &apos;Passive&apos;,
IF (Score__c &gt; 8 , &apos;Promotor&apos;, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position</label>
    <type>Text</type>
</CustomField>