force-app/main/default/objects/Customer_Feedback__c/fields/Premier_support_team__c.field-meta.xml
<CustomField>
    <fullName>Premier_support_team__c</fullName>
    <description>Premier_Success_Plan - The Premier support team Question #40 (0-10)</description>
    <label>Premier support team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>