force-app/main/default/objects/Customer_Feedback__c/fields/Product_Comment__c.field-meta.xml
<CustomField>
    <fullName>Product_Comment__c</fullName>
    <label>Product Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>