force-app/main/default/objects/Customer_Feedback__c/fields/Product_Division__c.field-meta.xml
<CustomField>
    <fullName>Product_Division__c</fullName>
    <description>Product Division</description>
    <label>Product Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HCM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>