force-app/main/default/objects/Customer_Feedback__c/fields/Product_success_webinars__c.field-meta.xml
<CustomField>
    <fullName>Product_success_webinars__c</fullName>
    <description>Premier_Success_Plan - Our product success webinars Question #42 (0-10)</description>
    <label>Product success webinars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>