force-app/main/default/objects/Customer_Feedback__c/fields/Professionalism_Correct_Information__c.field-meta.xml
<CustomField>
    <fullName>Professionalism_Correct_Information__c</fullName>
    <label>Professionalism &amp; Correct Information</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>