force-app/main/default/objects/Customer_Feedback__c/fields/Professionalism_Correct_InformationISB__c.field-meta.xml
<CustomField>
    <fullName>Professionalism_Correct_InformationISB__c</fullName>
    <formula>ISBLANK( Professionalism_Correct_Information__c )</formula>
    <label>Professionalism &amp; Correct InformationISB</label>
    <type>Checkbox</type>
</CustomField>