force-app/main/default/objects/Customer_Feedback__c/fields/Promoter__c.field-meta.xml
<CustomField>
    <fullName>Promoter__c</fullName>
    <formula>Score__c  &gt;= 9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Score  &gt;= 9</inlineHelpText>
    <label>Promoter</label>
    <type>Checkbox</type>
</CustomField>