force-app/main/default/objects/Customer_Feedback__c/fields/Regular_Updates__c.field-meta.xml
<CustomField>
    <fullName>Regular_Updates__c</fullName>
    <label>Regular Updates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>