force-app/main/default/objects/Customer_Feedback__c/fields/RegularUpdateISBLANK__c.field-meta.xml
<CustomField>
    <fullName>RegularUpdateISBLANK__c</fullName>
    <formula>IsBlank( Regular_Updates__c )</formula>
    <label>RegularUpdateISBLANK</label>
    <type>Checkbox</type>
</CustomField>