force-app/main/default/objects/Customer_Feedback__c/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <label>Resolution Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>