force-app/main/default/objects/Customer_Feedback__c/fields/ResolutionTimeISBLANK__c.field-meta.xml
<CustomField>
    <fullName>ResolutionTimeISBLANK__c</fullName>
    <formula>ISBLANK( Resolution_Time__c )</formula>
    <label>ResolutionTimeISBLANK</label>
    <type>Checkbox</type>
</CustomField>