force-app/main/default/objects/Customer_Feedback__c/fields/Respondent_Email__c.field-meta.xml
<CustomField>
    <fullName>Respondent_Email__c</fullName>
    <description>Respondent email from CustomerGauge</description>
    <label>Respondent Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>