force-app/main/default/objects/Customer_Feedback__c/fields/Respondent_Name__c.field-meta.xml
<CustomField>
    <fullName>Respondent_Name__c</fullName>
    <label>Respondent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>