force-app/main/default/objects/Customer_Feedback__c/fields/Scope_Matched_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Scope_Matched_Expectation__c</fullName>
    <inlineHelpText>The FlightPath project scope matched your expectation?</inlineHelpText>
    <label>Scope Matched Expectation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>