force-app/main/default/objects/Customer_Feedback__c/fields/Service_Received_From_Payroll_Exec__c.field-meta.xml
<CustomField>
    <fullName>Service_Received_From_Payroll_Exec__c</fullName>
    <description>The service you received from your Payroll Executive</description>
    <label>Service Received From Payroll Exec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>