force-app/main/default/objects/Customer_Feedback__c/fields/Stages_Timeframes_Communicated__c.field-meta.xml
<CustomField>
    <fullName>Stages_Timeframes_Communicated__c</fullName>
    <inlineHelpText>The different stages and timeframes of the project were clearly communicated</inlineHelpText>
    <label>Stages &amp; Timeframes Communicated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>