force-app/main/default/objects/Customer_Feedback__c/fields/Sub_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Sub_Analysis__c</fullName>
    <label>Sub Analysis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>