force-app/main/default/objects/Customer_Feedback__c/fields/Taskray_Flighpath_Type__c.field-meta.xml
<CustomField>
    <fullName>Taskray_Flighpath_Type__c</fullName>
    <formula>TEXT(TaskRay_Project__r.FlightPath_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taskray Flighpath Type</label>
    <type>Text</type>
</CustomField>