force-app/main/default/objects/Customer_Feedback__c/fields/Taskray_Product__c.field-meta.xml
<CustomField>
    <fullName>Taskray_Product__c</fullName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>