force-app/main/default/objects/Customer_Feedback__c/fields/Taskray_Product_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Taskray_Product_Lookup__c</fullName>
    <formula>TEXT(TaskRay_Project__r.Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taskray Product</label>
    <type>Text</type>
</CustomField>