force-app/main/default/objects/Customer_Feedback__c/fields/The_consultant_communicated_well_and_upd__c.field-meta.xml
<CustomField>
    <fullName>The_consultant_communicated_well_and_upd__c</fullName>
    <label>Communicated well &amp; updated through day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>