force-app/main/default/objects/Customer_Feedback__c/fields/The_consultant_confirmed_the_objectives__c.field-meta.xml
<CustomField>
    <fullName>The_consultant_confirmed_the_objectives__c</fullName>
    <label>The consultant confirmed the objectives</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>