force-app/main/default/objects/Customer_Feedback__c/fields/The_consultant_started_the_work_on_time__c.field-meta.xml
<CustomField>
    <fullName>The_consultant_started_the_work_on_time__c</fullName>
    <label>The consultant started the work on time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>