force-app/main/default/objects/Customer_Feedback__c/fields/The_consultant_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>The_consultant_was_knowledgeable__c</fullName>
    <label>The consultant was knowledgeable</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>