force-app/main/default/objects/Customer_Feedback__c/fields/Time_Process_Took__c.field-meta.xml
<CustomField>
    <fullName>Time_Process_Took__c</fullName>
    <description>The time the process took from start to finish</description>
    <label>Time Process Took</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>