force-app/main/default/objects/Customer_Feedback__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Project Closure</fullName>
            </value>
            <value>
                <fullName>Service Delivery</fullName>
            </value>
            <value>
                <fullName>Biannual May19</fullName>
            </value>
            <value>
                <fullName>FlightPath Review</fullName>
            </value>
            <value>
                <fullName>FlightPath Close</fullName>
            </value>
            <value>
                <fullName>Biannual May21</fullName>
            </value>
            <value>
                <fullName>Biannual Nov21</fullName>
            </value>
            <value>
                <fullName>Biannual May22</fullName>
            </value>
            <value>
                <fullName>Biannual Nov22</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>