force-app/main/default/objects/Customer_Feedback__c/fields/What_do_you_find_most_valuable_about_the__c.field-meta.xml
<CustomField>
    <fullName>What_do_you_find_most_valuable_about_the__c</fullName>
    <description>Premier_Success_Plan - What do you find most valuable about the Premier Success service? Question #44 (Text)</description>
    <label>The Premier Success service</label>
    <type>TextArea</type>
</CustomField>