force-app/main/default/objects/Customer_Feedback__c/fields/Your_CSM__c.field-meta.xml
<CustomField>
    <fullName>Your_CSM__c</fullName>
    <description>Premier_Success_Plan - Your CSM ([[segment_i]]) Question #39 (0-10)</description>
    <label>Your CSM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>