force-app/main/default/objects/Customer_Feedback__c/recordTypes/Consultant_Survey.recordType-meta.xml
<RecordType>
    <fullName>Consultant_Survey</fullName>
    <active>true</active>
    <label>Consultant Survey</label>
</RecordType>