force-app/main/default/objects/Customer_Feedback__c/recordTypes/CRM_Upgrade.recordType-meta.xml
<RecordType>
    <fullName>CRM_Upgrade</fullName>
    <active>true</active>
    <label>CRM Upgrade</label>
</RecordType>