force-app/main/default/objects/Customer_Feedback__c/recordTypes/CTS_Migration.recordType-meta.xml
<RecordType>
    <fullName>CTS_Migration</fullName>
    <active>true</active>
    <label>CTS Migration</label>
</RecordType>