force-app/main/default/objects/Customer_Feedback__c/recordTypes/Flightpath_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Flightpath_Feedback</fullName>
    <active>true</active>
    <label>Flightpath Feedback</label>
</RecordType>