force-app/main/default/objects/Customer_Feedback__c/recordTypes/Flightpath_Feedback_Manual.recordType-meta.xml
<RecordType>
    <fullName>Flightpath_Feedback_Manual</fullName>
    <active>true</active>
    <label>Flightpath Feedback - Manual</label>
</RecordType>