force-app/main/default/objects/Customer_Feedback__c/recordTypes/Kickoff_Survey.recordType-meta.xml
<RecordType>
    <fullName>Kickoff_Survey</fullName>
    <active>true</active>
    <description>Kickoff Survey</description>
    <label>Kickoff Survey</label>
</RecordType>