force-app/main/default/objects/Customer_Feedback__c/recordTypes/Project_Milestone.recordType-meta.xml
<RecordType>
    <fullName>Project_Milestone</fullName>
    <active>true</active>
    <description>Project Milestone Survey Type</description>
    <label>Project Milestone</label>
</RecordType>