force-app/main/default/objects/Customer_Feedback__c/recordTypes/Renewal_Uplift.recordType-meta.xml
<RecordType>
    <fullName>Renewal_Uplift</fullName>
    <active>true</active>
    <description>Survey when a Renewal Opportunity is marked Closed – Won</description>
    <label>Renewal Uplift</label>
</RecordType>