force-app/main/default/objects/Customer_Feedback__c/recordTypes/Service_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Service_Feedback</fullName>
    <active>true</active>
    <description>Service Feedback records, primarily setup for Riliance OS</description>
    <label>Service Feedback</label>
</RecordType>