force-app/main/default/objects/Customer_Feedback__c/recordTypes/Success_Plan.recordType-meta.xml
<RecordType>
    <fullName>Success_Plan</fullName>
    <active>true</active>
    <description>Success Plan Survey</description>
    <label>Success Plan</label>
</RecordType>