force-app/main/default/objects/Customer_Feedback__c/recordTypes/Support_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Support_Feedback</fullName>
    <active>true</active>
    <description>Support Feedback</description>
    <label>Support Feedback</label>
</RecordType>