force-app/main/default/objects/Customer_Feedback__c/validationRules/CheckIn_field_mandatory_if_Feedback.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckIn_field_mandatory_if_Feedback</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Type__c,&quot;FlightPath Review&quot;) &amp;&amp; ISPICKVAL(  Check_In__c ,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Check_In__c</errorDisplayField>
    <errorMessage>You must complete the Check In Box.</errorMessage>
</ValidationRule>